# headfinal

./: README.md
OneDrive/Desktop/PV3/PV3/contracts/: .env  Anchor.toml  Cargo.toml  admin1.json  admin2.json  admin3.json  deploy-devnet.js  deploy-fixed.js  deploy-pv3.js  deploy.sh  deploy.ts  env.devnet  env.template  package-lock.json  package.json  referral-pool.json  treasury-wallet.json  tsconfig.json  verifier-service.json
OneDrive/Desktop/PV3/PV3/contracts/programs/pv3/: Cargo.toml
OneDrive/Desktop/PV3/PV3/contracts/programs/pv3/src/: admin.rs  lib.rs  session.rs  verifier.rs
OneDrive/Desktop/PV3/PV3/contracts/src/: admin.rs  lib.rs  verifier.rs
OneDrive/Desktop/PV3/PV3/contracts/tests/: pv3.ts
headfinal/: DEPLOYMENT_GUIDE.md  deploy.ps1  deploy.sh  download-vercel-project.sh  fix-matchmaking.md  link-to-vercel.sh  merge-to-main.ps1  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  push-to-github.ps1  push-to-github.sh  setup-git.sh  vercel.json
headfinal/app/: globals.css  page.tsx
headfinal/components/: cr7-character.tsx  cz-character.tsx  game-component.tsx  game-header.tsx  game-loading-screen.tsx  game-text.tsx  leaderboard.tsx  mbappe-character.tsx  neymar-character.tsx  pessi-character.tsx  sbf-character.tsx  trump-character.tsx
headfinal/docs/: leaderboard-matchmaking-improvements.md  production-verification.md
headfinal/lib/: env.ts  escrow-service.ts  kv-client.ts  kv.ts  leaderboard-service.ts  matchmaking-client.ts  matchmaking-service.ts  redis-admin.ts  redis-client.ts  redis-rest-client.ts  redis.js  (+7 more)
(+238 files in other folders)
